<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loginMessage">ERROR</string>
    <string name="passEntered"></string>
    <string name="mailEntered"></string>
<string name="login">Login</string>
<string name="login_page">Login Page</string>
<string name="email">Email</string>
<string name="password">Password</string>
<string name="login_button">LOGIN</string>
<string name="link_to_register">Sign Up Now!</string>
<string name="create_account">Create Account</string>
<string name="register_account">Register Account</string>
<string name="min_6_characters">min 6 characters</string>
<string name="example">example@example.com</string>
<string name="university">University</string>
<string name="done">Register!</string>
<string name="congratulation">Congratulations!</string>
<string name="ok">OK</string>
<string name="welcome">Welcome</string>
<string name="btn_logout">Log Out!</string>


<string name="title_section1">News Feed</string>
<string name="title_section2">Discover</string>
<string name="title_section3">Browse</string>



    <string name="subscriptionsTitle">Subscriptions</string>

    <string name="recentUpdatesTitle">Recent Updates</string>


<string name="browse">Browse Page</string>
<string name="filterButton">Filter Menu</string>
<string name="filterComplete">Filter</string>
<string name="filterTitle">Categories</string>
<string name="societiesTitle">Societies</string>


<string name="category_1">Academic and Careers</string>
<string name="category_2">Faith and Culture</string>
<string name="category_3">Games and Activities</string>
<string name="category_4">Music and Media</string>
<string name="category_5">Performance</string>
<string name="category_6">Politics and Debating</string>
<string name="category_7">Sports</string>
<string name="category_8">Unique</string>

<string name="search_page_title">SEARCH</string>
<string name="search_instructional_text">Enter a society name or any related keywords below!</string>
<string name="title_activity_search_results">SearchResults</string>

<string name="no_results_text">No Results Found</string>
<string name="search_results_title_text">Search Results</string>
<string name="search_hint">Search Societies</string>
<string name="app_name">FULL SocBox</string>

<string name="image1_address">http://images.uesp.net/b/bb/MW-Map-Vvardenfell.jpg</string>

<string name="testsocietyTitle">The (test) society</string>
<string name="testsocietyDescription">This will contain a short description of the society.
        This will presumably be several lines long and will therefore wrap around.</string>
<string name="testsocietyBackgroundImage">test1</string>
<string name="testsocietyTitleColor">#ffff0000</string>
<string name="testsocietyDescriptionColor">#0000ff00</string>
<string name="socName"></string>

<string name= "title_activity_society_home_page">society home</string>
<string name= "title_activity_example">society home</string>
<string name="title_activity_video_bank_handler">VideoBankHandler</string>
<string name="title_activity_call_video_handler">callVideoHandler</string>

<string name="video_bank">Video Bank</string>
<string name="title">Title</string>
<string name="description">Description</string>
<string name="video_handler">Video Handler</string>
<string name="back">return to previous track</string>
<string name="play">play song</string>
<string name="forward">change track</string>
<string name="mute">mute</string>
<string name="action_sound_control">Sound Control</string>
<string name="title_activity_presentation_grid_view">PresentationGridView</string>


<string name="title_activity_additional_content">AdditionalContent</string>
<string name="title_activity_presentation_slides">PresentationSlides</string>
<string name="title_activity_audio_bank">AudioBank</string>

    <string name="sign_up_description">Not a member?</string>
    <string name="login_main_description">Login</string>
    <string name="login_email_description">Email</string>
    <string name="enter_email">Enter your email</string>
    <string name="login_pass_description">Password</string>
    <string name="enter_pass">Enter your password</string>
    <string name="login_socbox">Go</string>
    <string name="go_to_create_account">Create Account</string>

    <string name="home">Home</string>



</resources>

