     <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp">

    <!--  Title  -->
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/login_main_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:background="#ff1e4a6e"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-thin"
       />
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_weight="1"
             android:gravity="center">
    <!--  Email  -->

        <TextView
        android:text="@string/login_email_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="bottom"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"
           />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginTop="5dip"
        android:maxLength="30"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:id="@+id/mailBox"/>

    <!--  Password  -->
    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/login_pass_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:gravity="bottom"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal" />

        <EditText

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_pass"
            android:layout_marginTop="5dip"
            android:layout_gravity="center_horizontal"
            android:maxLength="30"
            android:id="@+id/passBox" />

     <!--  Login Button  -->
     <Button
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:text="@string/login_socbox"
        android:layout_gravity="center_horizontal"
        android:onClick="toLoggedIn"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:background="#ffa9bcc7"
        android:elegantTextHeight="false"
        android:fontFamily="sans-serif-thin"
        android:textAllCaps="false"/>
         </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:gravity="center|bottom">
        <TextView
            android:text="@string/sign_up_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="15sp"/>
    <Button
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/go_to_create_account"
        android:id="@+id/buttonToRegisterPage"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="#ffa9bcc7"
        android:fontFamily="sans-serif-thin"
       />
    </LinearLayout>



</LinearLayout>
