<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".RegisterAccountPage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dip"
        android:weightSum="1">

        <!--  Title  -->
        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/create_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:gravity="center_horizontal"
            android:id="@+id/textCreateAccount"
            android:textColor="@android:color/white"
            android:background="@color/dark_navy"
            android:fontFamily="sans-serif-thin"/>

        <!--  Description -->
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="@string/register_account"
            android:id="@+id/textMessage"
            android:textSize="20sp"/>

        <!--  Set Email  -->
        <TextView
            android:layout_marginTop="10dp"
            android:text="@string/email"
            android:id="@+id/textEmail"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textStyle="bold"
            android:gravity="bottom"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/example"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:ems="10"
            android:id="@+id/editEmail"
            android:layout_gravity="center_horizontal"/>

        <!--  Set Password -->
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:id="@+id/textPassword"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="bottom"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/min_6_characters"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:ems="10"
            android:id="@+id/editPassword"
            android:layout_gravity="center_horizontal"/>

        <!--  Set University -->
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:id="@+id/textUniversity"
            android:textStyle="bold"
            android:gravity="bottom"
            android:textSize="20sp"
            android:textColor="#fb000000"
            android:layout_gravity="center_horizontal" />


        <Spinner
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/universitySpinner" />

        <!--  Button Done -->


        <Button
            android:layout_marginTop="55dp"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:text="@string/done"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:id="@+id/buttonDone"
            android:layout_gravity="center_horizontal"
            android:onClick="toAccountCreated"
            android:background="@color/light_navy"
            android:textAllCaps="false"
            android:fontFamily="sans-serif-thin"/>

    </LinearLayout>

</LinearLayout>
